work/jobs/test0/builds/2015-07-22_12-58-42/log
Started by user [8mha:AAAAlh+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzOEgYu/dLi1CL9vNKcHACFIKlWvwAAAA==[0manonymous
Building in workspace /Users/prit8976/Documents/ultimate-coverage/work/jobs/test0/workspace
 > git rev-parse --is-inside-work-tree # timeout=10
Fetching changes from the remote Git repository
 > git config remote.origin.url https://github.com/pritic/Example-Project.git # timeout=10
Fetching upstream changes from https://github.com/pritic/Example-Project.git
 > git --version # timeout=10
 > git -c core.askpass=true fetch --tags --progress https://github.com/pritic/Example-Project.git +refs/heads/*:refs/remotes/origin/*
 > git rev-parse refs/remotes/origin/master^{commit} # timeout=10
 > git rev-parse refs/remotes/origin/origin/master^{commit} # timeout=10
Checking out Revision c24c4345c265d6376477eeea30b321bc8b82c7f4 (refs/remotes/origin/master)
 > git config core.sparsecheckout # timeout=10
 > git checkout -f c24c4345c265d6376477eeea30b321bc8b82c7f4
 > git rev-list c24c4345c265d6376477eeea30b321bc8b82c7f4 # timeout=10
[workspace] $ /bin/sh -xe /var/folders/2p/ytpqqnlx0lb0wf0w99_dp8br_vv_ty/T/hudson2626937785894547987.sh
+ cd src
+ javac exampleproject.java
exampleproject.java:4: error: package net.sf.json does not exist
import net.sf.json.JSONArray;
                  ^
exampleproject.java:5: error: package net.sf.json does not exist
import net.sf.json.JSONObject;
                  ^
exampleproject.java:133: error: cannot find symbol
        Map<JSONArray, Long> failure_map = new HashMap<JSONArray, Long>();
            ^
  symbol:   class JSONArray
  location: class exampleproject
exampleproject.java:133: error: cannot find symbol
        Map<JSONArray, Long> failure_map = new HashMap<JSONArray, Long>();
                                                       ^
  symbol:   class JSONArray
  location: class exampleproject
exampleproject.java:134: error: cannot find symbol
        Map<JSONArray, Long> pass_map = new HashMap<JSONArray, Long>();
            ^
  symbol:   class JSONArray
  location: class exampleproject
exampleproject.java:134: error: cannot find symbol
        Map<JSONArray, Long> pass_map = new HashMap<JSONArray, Long>();
                                                    ^
  symbol:   class JSONArray
  location: class exampleproject
exampleproject.java:136: error: cannot find symbol
        JSONObject j_obj;
        ^
  symbol:   class JSONObject
  location: class exampleproject
exampleproject.java:137: error: cannot find symbol
        JSONArray jsonMainArr;
        ^
  symbol:   class JSONArray
  location: class exampleproject
exampleproject.java:142: error: cannot find symbol
            j_obj = JSONObject.fromObject(matchPattern1.group());
                    ^
  symbol:   variable JSONObject
  location: class exampleproject
9 errors
Build step 'Execute shell' marked build as failure
ERROR: Publisher org.jenkinsci.plugins.ultimatecoverage.APICoveragePluginPublisher aborted due to exception
[8mha:AAAAWB+LCAAAAAAAAP9b85aBtbiIQSmjNKU4P08vOT+vOD8nVc8DzHWtSE4tKMnMz/PLL0ldFVf2c+b/lb5MDAwVRQxSaBqcITRIIQMEMIIUFgAAckCEiWAAAAA=[0mjava.lang.IllegalStateException: No match found
	at java.util.regex.Matcher.group(Matcher.java:485)
	at java.util.regex.Matcher.group(Matcher.java:445)
	at org.jenkinsci.plugins.ultimatecoverage.APICoveragePluginPublisher.verification(APICoveragePluginPublisher.java:82)
	at org.jenkinsci.plugins.ultimatecoverage.APICoveragePluginPublisher.perform(APICoveragePluginPublisher.java:66)
	at hudson.tasks.BuildStepMonitor$3.perform(BuildStepMonitor.java:45)
	at hudson.model.AbstractBuild$AbstractBuildExecution.perform(AbstractBuild.java:770)
	at hudson.model.AbstractBuild$AbstractBuildExecution.performAllBuildSteps(AbstractBuild.java:734)
	at hudson.model.Build$BuildExecution.post2(Build.java:183)
	at hudson.model.AbstractBuild$AbstractBuildExecution.post(AbstractBuild.java:683)
	at hudson.model.Run.execute(Run.java:1770)
	at hudson.model.FreeStyleBuild.run(FreeStyleBuild.java:43)
	at hudson.model.ResourceController.execute(ResourceController.java:89)
	at hudson.model.Executor.run(Executor.java:240)
Finished: FAILURE
